# scenevis

./: .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  mise.toml  prek.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  security.yml
app/: biome.json  index.html  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
app/e2e/: analysis.spec.ts
app/src/: main.tsx  styles.css
app/src/app/: App.test.tsx  App.tsx
app/src/components/ui/: button.tsx  select.tsx  table.tsx  tabs.tsx  tooltip.tsx
app/src/features/scene-analysis/: ComparisonFilters.tsx  ComparisonView.tsx  EmptyWorkspace.tsx  FileDropZone.test.tsx  FileDropZone.tsx  MetadataPanel.test.tsx  MetadataPanel.tsx  MetricGuide.test.tsx  MetricGuide.tsx  MetricPanel.tsx  RegionInspector.tsx  ScenarioEditor.tsx  ScenarioRail.tsx  SceneCanvas.test.tsx  SceneCanvas.tsx  SelectionToolbar.tsx  ThemeControl.test.tsx  ThemeControl.tsx  Workspace.tsx  WorkspaceHeader.tsx  comparison.test.ts  comparison.ts  drawing.test.ts  drawing.ts  export.test.ts  export.ts  metadata.test.ts  metadata.ts  metrics.test.ts  metrics.ts  model.ts  quality-metrics.test.ts  quality-metrics.ts  scenarios.ts  (+4 more)
examples/: corridor.rois.yaml
scripts/: check_contract.py  check_version.py  dev.py  export_openapi.py  stamp_version.py  validate_commit_msg.py  version.py  version_workflow.py
src/scene_analyzer/: __init__.py  __main__.py  cli.py  error.py
src/scene_analyzer/analysis/: __init__.py  metrics.py  model.py  pipeline.py
src/scene_analyzer/report/: __init__.py  overlay.py  write.py
src/scene_analyzer/scene/: __init__.py  roi.py
src/scenevis/: __init__.py  __main__.py  cli.py  error.py
src/scenevis/analysis/: __init__.py  metrics.py  model.py  pipeline.py  quality.py
src/scenevis/api/: __init__.py  app.py  model.py  upload.py
src/scenevis/scene/: __init__.py  metadata.py  model.py  regions.py  suggest.py
tests/: test_cli.py  test_public_api.py
tests/analysis/: test_metrics.py  test_quality.py
tests/api/: test_app.py  test_camera.py
tests/fixtures/canon_eos_200d/: manifest.json  manifest.yaml
tests/report/: test_camera_outputs.py  test_outputs.py
tests/scene/: test_metadata.py  test_regions.py  test_roi.py  test_suggest.py
tests/scene/load/: test_camera_fixtures.py
tests/scene/selection/: test_model.py
(+13 files in other folders)
