[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "scenevis"
version = "0.1.0"
description = "Interactive target-visibility analysis for photographic scenes."
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
requires-python = ">=3.12"
dependencies = [
    "exifread>=3.5,<4.0",
    "fastapi>=0.116,<1.0",
    "numpy>=2.4,<3.0",
    "pillow>=12.0,<13.0",
    "pydantic>=2.12,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "rawpy>=0.27,<0.28",
    "uvicorn>=0.35,<1.0",
]

[project.scripts]
scenevis = "scenevis.cli:main"

[project.urls]
Homepage = "https://gitlab.com/riccardofagiolo17/scenevis"
Repository = "https://gitlab.com/riccardofagiolo17/scenevis"
Issues = "https://gitlab.com/riccardofagiolo17/scenevis/-/issues"
Mirror = "https://github.com/riccardostokker/scenevis"

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pip-audit>=2.9,<3.0",
    "pytest>=9.0,<10.0",
    "ruff>=0.15,<0.16",
    "ty>=0.0.61,<0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "T10", "RUF"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers -m 'not camera_fixture'"
testpaths = ["tests"]
markers = [
    "camera_fixture: exercises original full-resolution camera files",
]
